kustomize/linkerd/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagger
spec:
  template:
    spec:
      containers:
        - name: flagger
          args:
            - -log-level=info
            - -include-label-prefix=app.kubernetes.io
            - -mesh-provider=linkerd
            - -metrics-server=http://linkerd-prometheus:9090
